--- a/css/accueil.css
+++ b/css/accueil.css
@@ -9,6 +9,7 @@
 
 body {
     margin: 0;
+    padding-top: 100px;
     background-color: #fdf2e9;
 }
 
@@ -106,7 +107,6 @@ header #menu_bar a:hover::before {
 /* Section "Titre" / Présentation */
 
 #title {
-    margin-top: 10%;
     background-image: url('../assets/Img_Accueil/Title.png');
     background-size: cover;
     display: block;
@@ -395,6 +395,16 @@ footer div {
     padding: 10px;
 }
 
+#logoUnesco img {
+    max-height: 80px;
+    height: 100%;
+}
+
+#IUT img{
+    max-height: 40px;
+    height: 100%;
+}
+
 footer div h4 {
     position: relative;
 }
@@ -412,6 +422,10 @@ footer div h4::before {
 /* Responsive */
 
 @media only screen and (max-width: 700px) {
+
+    body {
+        padding-top: 80px;
+    }
     
     #hautHeader #titleHeader {
         font-size: 2.8vw;
@@ -425,10 +439,6 @@ footer div h4::before {
 
     header #menu_bar p {
         font-size: 2vw;
-    }
-    
-    #title{
-        margin-top: 20%;
     }
 
     #title p {
